k8s/test/ing1.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ddos-test1
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/limit-connections: "10"
spec:
  rules:
  - host: ddos-test1.test.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: modsecurity
            port:
              number: 80
