k8s/test/ing2.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ddos-test2
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/limit-rps: "5"
spec:
  rules:
  - host: ddos-test2.test.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: modsecurity
            port:
              number: 80
